# actix_todo_api

./: Cargo.toml  LICENSE  docker-compose.yml  readme.adoc
common/: todo.rest
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs
src/models/: mod.rs  todo_items_model.rs
src/resources/: health_resource.rs  mod.rs  todo_items_resources.rs  todo_resource.rs
