[package]
name = "actix-service-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = {version = "1.0.143", features = ["derive"]}
dotenv = "0.15.0"
config = "0.13.2"
tokio-postgres = "0.7.6"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = {version ="0.10.2", features = ["serde"] }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"